Fixing horizontal scroll (quote-ticker); beginnings of recent GitHub commits

--- a/presentation/src/app/components/quote/quote-ticker/quote-ticker.component.css
+++ b/presentation/src/app/components/quote/quote-ticker/quote-ticker.component.css
@@ -7,3 +7,8 @@
 table {
   width: 100%;
 }
+
+mat-card {
+  max-width: 100%;
+  overflow-x: hidden;
+}
