--- a/presentation/src/app/pages/activity/activity.component.css
+++ b/presentation/src/app/pages/activity/activity.component.css
@@ -1,3 +1,15 @@
 table {
   width: 100%;
 }
+
+.example-ripple-container {
+  cursor: pointer;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+
+  -webkit-user-drag: none;
+  -webkit-tap-highlight-color: transparent;
+}
