--- a/presentation/src/app/pages/home/home.component.css
+++ b/presentation/src/app/pages/home/home.component.css
@@ -1,48 +1,64 @@
 .hello-there {
-    text-align: center;
-    width: 35%;
-    color: white; 
-  }
-  
-  
-  .typewriter h1 {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    /*margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
-    animation: 
-      blink-caret 1s step-end infinite
-      ,typing 1.5s steps(20, end)
-      /* ,backspacing 1.5s steps(20, end)
+  text-align: center;
+  width: 35%;
+  color: white;
+}
+
+.typewriter h1 {
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  /*margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em;
+  /* Adjust as needed */
+  animation: blink-caret 1s step-end infinite, typing 1.5s steps(20, end)
+  /* ,backspacing 1.5s steps(20, end)
       ,typing 3.5s steps(20, end)
       ,backspacing 1.5s steps(20, end)
       ,typing 3.5s steps(20, end)
       ,backspacing 1.5s steps(20, end) */
-  }
-  
-  .backspacing {
-    animation-name: backspacing;
-    animation-duration: 1.5s;
-    animation-iteration-count: 2;
-    /* animation: 
+}
+
+.backspacing {
+  animation-name: backspacing;
+  animation-duration: 1.5s;
+  animation-iteration-count: 2;
+  /* animation: 
       backspacing 1.5s steps(20, end) */
+}
+
+/* The typing effect */
+
+@keyframes typing {
+  from {
+    width: 0%
   }
-  
-  /* The typing effect */
-  @keyframes typing {
-    from { width: 0% }
-    to { width: 35% }
+  to {
+    width: 35%
   }
-  
-  /* The backspacing effect */
-  @keyframes backspacing {
-    from { width: 35% }
-    to { width: 17% }
+}
+
+/* The backspacing effect */
+
+@keyframes backspacing {
+  from {
+    width: 35%
   }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: white; }
+  to {
+    width: 17%
   }
+}
+
+/* The typewriter cursor effect */
+
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent
+  }
+  50% {
+    border-color: white;
+  }
+}
